src/objects/Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Starter Pack</description>
    <fields>
        <fullName>Account_Processor__c</fullName>
        <inlineHelpText>Setting for the Account model. Should be &quot;One-to-one&quot; or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c</inlineHelpText>
        <label>Account Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Account_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>Household Account Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account_Addresses_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Address management for Household Accounts when selected.</description>
        <inlineHelpText>Disables Address management for Household Accounts when selected.</inlineHelpText>
        <label>Household Account Addresses Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_to_One_RecordTypeID__c</fullName>
        <inlineHelpText>The ID of the record type to be used for 1x1 accounts. If none is selected, the account will default to the user&apos;s default account selection.</inlineHelpText>
        <label>One-to-One RecordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Default_role__c</fullName>
        <inlineHelpText>Default role for the primary Opportunity Contact Role</inlineHelpText>
        <label>Opportunity Contact Role Default role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Account_Addresses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Address management for Organizational Accounts when selected.</description>
        <inlineHelpText>Enables Address management for Organizational Accounts when selected.</inlineHelpText>
        <label>Organizational Account Addresses Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Simple_Address_Change_Treated_as_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</description>
        <inlineHelpText>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</inlineHelpText>
        <label>Simple Address Change Treated as Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>